<resources>
    <string name="app_name">Vendor</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>

    <string name="posts">Posts</string>
    <string name="login">Login</string>
    <string name="signup">Create new account</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="enter_field">Enter this field</string>
    <string name="checkInputs">Enter all required fields correctly</string>
    <string name="email">Email</string>
    <string name="conf_email">Confirm Email</string>
    <string name="register">Register</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="invalid_user">Check user name or password</string>
    <string name="no_net">Check your internet connection</string>
    <string name="search">Search</string>
    <string name="upload_image">upload image</string>
    <string name="upload_image_message">please upload image</string>
    <string name="Follow">follow</string>
    <string name="add">Add</string>
    <string name="message">Message</string>
    <string name="title_activity_post">Comments</string>
    <string name="followers">followers</string>
    <string name="images">images</string>
    <string name="following">following</string>
    <string name="mobile">Mobile</string>
    <string name="about">About</string>
    <string name="hashtag">Hashtag</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">FaceBook</string>
    <string name="Update">update</string>
    <string name="change_password">Change Password</string>
    <string name="website">Website</string>
    <string name="change_image">Change</string>
    <string name="oldPass">Old Password</string>
    <string name="confPassword">Confirm Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="pass_doesnt_match">Password doesn\'t match</string>
    <string name="post">Post</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_full_screen_image">FullScreenImageActivity</string>
    <string name="Comment">comment</string>
    <string name="create_new_account">Create new acccount</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="send">Send</string>
    <string name="dismiss">Dismiss</string>
    <string name="newpass2mail">New password sent to your email</string>
    <string name="email_not_registered">Email not registered</string>
    <string name="title_activity_edit_post">EditPostActivity</string>
    <string name="cant_report_post">you can\'t report this post</string>
    <string name="reported_post">you reported this post</string>
    <string name="cant_delete_post">Can\'t delete post</string>
    <string name="deleted_post">Deleted</string>
    <string name="updated">Updated</string>
    <string name="cant_update">Can\'t update post</string>
    <string name="add_new_subject">Add new subject</string>
    <string name="follow">Follow</string>
    <string name="unfollow">UnFollow</string>
    <string name="logout">LogOut</string>
    <string name="write_comment">Write Comment</string>
    <string name="edit">Edit</string>
    <string name="checkLink">Enter valid url</string>
    <string name="title">Title</string>
    <string name="subject">Subject</string>
    <string name="logout_now">Log out now?</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="add_image">Add Image</string>
    <string name="loading">Loading...</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="done">Done</string>
    <string name="cant_post">Can\'t upload your post</string>
    <string name="account_updated">Account updated</string>
    <string name="cant_update_account">Error occured , Can\'t save updates</string>
</resources>
