<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/view_bg_color"
              android:orientation="vertical"
              android:padding="10.0dip">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="start"
        android:text="@string/forgetPassword"
        android:textColor="#FFFFFF"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"
        android:layout_marginBottom="15.0dip">

        <EditText
            android:id="@+id/fpw_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/password"
            android:gravity="start"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/submit_progress"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/fpw_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:text="@string/dismiss"/>

        <Button
            android:id="@+id/fpw_dialog_submit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:text="@string/send"/>
    </LinearLayout>
</LinearLayout>