<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <include layout="@layout/default_toolbar"/>

    <include layout="@layout/activity_progress"/>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                                android:layout_width="fill_parent"
                                                android:layout_height="fill_parent"
                                                android:fitsSystemWindows="true"
                                                android:paddingBottom="@dimen/activity_vertical_margin"
                                                android:paddingLeft="@dimen/activity_horizontal_margin"
                                                android:paddingRight="@dimen/activity_horizontal_margin"
                                                android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="160.0dip"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <include
                    android:id="@+id/edit_porfile_image"
                    layout="@layout/rounded_imageview"
                    android:layout_width="240.0dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/comment"/>

                <Button
                    android:id="@+id/edit_btn_uploadimage"
                    android:layout_width="fill_parent"
                    android:layout_height="30.0dip"
                    android:layout_gravity="bottom"
                    android:background="#1d000000"
                    android:text="@string/change_image"
                    android:textColor="#ffffffff"/>
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <EditText
                    android:id="@+id/edit_et_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_border_grey"
                    android:hint="@string/user_name"
                    android:padding="5.0dip"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <EditText
                    android:id="@+id/edit_et_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_border_grey"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="5.0dip"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <EditText
                    android:id="@+id/edit_et_mobile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_border_grey"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:padding="5.0dip"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <EditText
                    android:id="@+id/edit_et_hashtag"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_border_grey"
                    android:hint="@string/hashtag"
                    android:padding="5.0dip"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <EditText
                    android:id="@+id/edit_et_facebook"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_border_grey"
                    android:hint="@string/facebook"
                    android:padding="5.0dip"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <EditText
                    android:id="@+id/edit_et_twitter"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_border_grey"
                    android:hint="@string/twitter"
                    android:padding="5.0dip"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <EditText
                    android:id="@+id/edit_et_website"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_border_grey"
                    android:hint="@string/website"
                    android:padding="5.0dip"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <EditText
                    android:id="@+id/edit_et_instagram"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_border_grey"
                    android:hint="@string/instagram"
                    android:padding="5.0dip"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_et_about"
                    android:layout_width="fill_parent"
                    android:layout_height="100.0dip"
                    android:background="@drawable/rounded_border_grey"
                    android:gravity="top"
                    android:hint="@string/about"
                    android:padding="5.0dip"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/edit_btn_password"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="5.0dip"
                android:text="@string/change_password"/>

            <Button
                android:id="@+id/edit_btn_update"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_gravity="center_horizontal"
                android:text="@string/Update"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>