<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorPrimary"
              android:orientation="vertical"
              android:padding="5.0dip">

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip">

        <EditText
            android:id="@+id/pw_oldPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:hint="@string/oldPass"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip">

        <EditText
            android:id="@+id/pw_newPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip">

        <EditText
            android:id="@+id/pw_cPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:hint="@string/confPassword"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/submit_progress"/>

    <Button
        android:id="@+id/pw_dialog_submit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_bg"
        android:text="@string/Update"
        android:textColor="@color/button_text"/>
</LinearLayout>