<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:layout_width="fill_parent"
                                            android:layout_height="wrap_content"
                                            android:paddingBottom="@dimen/activity_vertical_margin"
                                            android:paddingLeft="@dimen/activity_vertical_margin"
                                            android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <include layout="@layout/user_addpsot_header"/>

        <TextView
            android:id="@+id/addpost_lbl_addnewpost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:gravity="center"
            android:inputType="textCapCharacters"
            android:text="@string/add_new_subject"
            android:textAppearance="?android:textAppearanceMedium"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip">

            <EditText
                android:id="@+id/addpost_et_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/title"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip">

            <EditText
                android:id="@+id/addpost_et_subject"
                android:layout_width="fill_parent"
                android:layout_height="144.0dip"
                android:gravity="start|top"
                android:hint="@string/subject"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="@dimen/post_images_view_width"
            android:layout_height="@dimen/post_images_view_height"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/addpost_images_recycler"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:background="#ffffffff"
                android:gravity="center"
                android:padding="5.0dip"
                android:scaleType="fitCenter"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/addpost_post_image"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:background="#ffffffff"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:visibility="visible"/>

            <Button
                android:id="@+id/upload_image_button"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="5.0dip"
                android:background="@color/button_bg"
                android:text="@string/add_image"
                android:textColor="@color/button_text"/>
        </LinearLayout>

        <include layout="@layout/submit_progress"/>

        <Button
            android:id="@+id/addpost_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/button_bg"
            android:text="@string/post"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>