<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:orientation="horizontal">

        <include
            android:id="@+id/search_row_logo"
            layout="@layout/rounded_imageview"
            android:layout_width="80.0dip"
            android:layout_height="60.0dip"
            android:background="@null"
            android:src="@drawable/usericon"/>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="start|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/search_row_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/search_row_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/button_bg"/>
        </LinearLayout>

        <Button
            android:id="@+id/search_row_follow"
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:layout_gravity="center_vertical"
            android:text="@string/Follow"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/search_row_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:text="@string/message"/>

        <Button
            android:id="@+id/search_row_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>
    </LinearLayout>
</LinearLayout>